# kurs-ai-vue

./: package-lock.json  shell.nix
backend/: Cargo.toml  README.md  shell.nix
backend/clorinde/: Cargo.toml
backend/clorinde/src/: array_iterator.rs  domain.rs  lib.rs  queries.rs  type_traits.rs  types.rs
backend/clorinde/src/client/: async_.rs
backend/clorinde/src/client/async_/: deadpool.rs  generic_client.rs
backend/clorinde/src/queries/: courses.rs  episodes.rs  modules.rs
backend/migrations/: 0001_initial.sql
backend/queries/: courses.sql  episodes.sql  modules.sql
backend/scripts/: load_data.sql
backend/src/: error.rs  main.rs  prelude.rs
backend/src/routes/: courses.rs  health.rs  mod.rs
backend/src/utils/: mod.rs
frontend/: .env  :w  README.md  index.html  launch.sh  package-lock.json  package.json  shell.nix  tailwind.config.js
frontend/src/: App.vue  main.ts
frontend/src/assets/: main.css
frontend/src/components/: Button.vue  CourseLink.vue  Link.vue  Sidebar.vue  SidebarRoot.vue
frontend/src/models/: course.ts  episode.ts  module.ts
frontend/src/pages/: Courses.vue  Episodes.vue  Index.vue  Modules.vue  SpecificCourse.vue
frontend/src/router/: index.ts
