[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "2"
tokio = { version = "1", features = ["full"] }
clorinde = { path = "./clorinde" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
rocket = { version = "0.5.1", features = ["json"] }

[dev-dependencies]
anyhow = "1"
